fern/products/realtime-sdk/pages/v4/guides/voice/weather-phone-with-signalwire-realtime-api.mdx
---
title: Weather Phone IVR
x-custom:
  ported_from_readme: true
  repo: https://github.com/signalwire/examples/tree/main/Voice/Weather%20Phone%20IVR%20-%20NodeJS
  tags:
    - sdk:relayrealtime
    - language:nodejs
    - product:voice
description: Learn how to build a weather phone IVR application with the SignalWire Realtime SDK.
sidebar_custom_props:
  platform: javascript
  github: https://github.com/signalwire/examples/tree/main/Voice/Weather%20Phone%20IVR%20-%20NodeJS
---

[17712093222-2]: tel:+17712093222
[buying-a-phone-number-2]: /platform/phone-numbers/getting-started/buying-a-phone-number
[call-1]: /realtime-sdk/voice/call
[call-playtts-1]: /realtime-sdk/voice/call#playtts
[call-prompt-1]: /realtime-sdk/voice/call#prompt
[community-discord]: https://discord.com/invite/F2WNYTNjuF
[connectphone-1]: /realtime-sdk/voice/call#connectphone
[connectsip-1]: /realtime-sdk/voice/call#connectsip
[create-a-signalwire-account-and-space]: https://m.signalwire.com/signups/new?s=1
[device-builder]: /realtime-sdk/voice/device-builder
[here-1]: https://github.com/signalwire/guides/tree/main/Voice/Weather%20Phone%20IVR%20-%20NodeJS
[here-2]: https://github.com/signalwire/guides/tree/main/Voice/Weather%20Phone%20IVR%20-%20NodeJS%20Relay%20v4
[here]: https://m.signalwire.com/signups/new?s=1
[project-id-and-api-token]: https://my.signalwire.com?page=credentials
[signalwire-realtime-api-1]: /realtime-sdk/
[signalwire-realtime-sdk-reference-2]: /realtime-sdk/
[signalwire-realtime-sdk-reference]: /realtime-sdk/voice/
[the-github-repo-1]: https://github.com/signalwire/guides/tree/main/Voice/Weather%20Phone%20IVR%20-%20NodeJS%20Relay%20v4
[the-github-repo]: https://github.com/signalwire/guides/tree/main/Voice/Weather%20Phone%20IVR%20-%20NodeJS
[view-the-related-github-repository-to-explore-this-codebase-1]: https://github.com/signalwire/guides/tree/main/Voice/Weather%20Phone%20IVR%20-%20NodeJS%20Relay%20v4
[view-the-related-github-repository-to-explore-this-codebase]: https://github.com/signalwire/guides/tree/main/Voice/Weather%20Phone%20IVR%20-%20NodeJS
[voice-client-s-1]: /realtime-sdk/voice/client


## Overview

This code sample is a simple weather phone IVR application that uses the [SignalWire
Realtime API][signalwire-realtime-api-1] to provide current weather report
to the caller in Washington DC either as a phone call or text.

In particular, this sample demonstrates how you can use the SignalWire realtime API to easily accomplish the following:

- Making a phone call programmatically using your numbers
- Waiting for, and programmatically receiving, phone calls to your numbers
- Taking user input from their dial pad to select between actions
- Connecting to a different phone call
- Sending a text message to the caller
- Playing audio, Text-to-Speech and ringtones through the phone

{/* #### Dial 📞 [+17712093222][17712093222-2] 📞 for a live demo right now! */}

The code we'll write is waiting for you at the other end.

## Required Resources

To be able to run this example, you will need a SignalWire account which you can create [here][here]. From your SignalWire Space, you need your [SignalWire API credentials][project-id-and-api-token].

Further, you'll need to get a number from SignalWire which will be used as the number for the IVR. You can get that from your SignalWire Dashboard. You can follow [Buying a Phone Number][buying-a-phone-number-2] if you need help.

If you are planning to make or allow calls outside of the US from SignalWire numbers, please note that you'll have to manually enable it. Follow [Enabling International Outbound Voice & SMS]\(Enabling International Outbound Voice & SMS) guide for more information.

To be able to run this project, you need to have Node.js and Node Package Manager (npm) installed.

This sample code is available on GitHub
[here][here-2].
You can follow the README.md instructions to download and run the sample.

## How to Run the Application

1. Edit the settings of your phone number so that our code can handle it. The RELAY Topic you specify here needs to match the one you specify in the code later. In this case, we have used 'office'.

<Frame caption="A screenshot of the Edit Settings page of a phone number in SignalWire. The number is set to accept incoming calls as Voice Calls, handle the calls using a RELAY Application, and forward the call to a RELAY topic called 'office'." >

![the Edit Settings page of a phone number in SignalWire.](/assets/images/dashboard/relay/app_voice_handler.webp)

</Frame>

2. Start by adding your Project ID and API credentials, and the phone number you bought to the `env.sample` file, in the format specified.
3. Rename the `env.sample` file as `.env`.
4. Run `yarn install` in the directory to download the required libraries.
5. Run `node index.js` to start the program. If all went well, it should now be listening for phone calls to the number specified in `.env` file.

Alternatively, if you want to use docker to run a container. Instead of doing `yarn install`, do the following instead:

1. `docker build . -t weather-ivr` to build the container using the dockerfile already in the repo.
2. `docker run -d weather-ivr` to run it.

## Code

The main code for this project lives in a single file: `index.js`, and from there we'll make and receive the phone call. Other than that, there are a few more files that we will briefly discuss:

1. `.env.sample` file contains the format in which you will provide your SignalWire API credentials to the code. Copy this file to `.env` and provide your credentials. Please take care to not commit your `.env` file on GitHub, or make it public in any way.

2. `package.json` lists out the dependencies that you will need to run the code. This includes the SignalWire Realtime SDK. When you run `npm install` or `yarn install`, the packages listed here will be downloaded and installed.

[View the related GitHub Repository to explore this
codebase.][view-the-related-github-repository-to-explore-this-codebase-1]

### Abridged code sample


```javascript
import "dotenv/config";
import parsePhoneNumber from "libphonenumber-js";
import axios from "axios";
import { SignalWire, Voice } from "@signalwire/realtime-api";

const DC_WEATHER_PHONE = "+12025891212";
const PHONE_NUMBER = process.env.PHONE_NUMBER;

const client = await SignalWire({
  project: process.env.PROJECT_ID,
  token: process.env.API_TOKEN,
  topics: ["office"],
});

const messageClient = client.messaging;
const voiceClient = client.voice;

console.log("Waiting for calls...");
await voiceClient.listen({
  topics: ["office"],
  onCallReceived: async (call) => {
    console.log("Got a call from", call.from, "to number", call.to);
    await call.answer();
    console.log("Inbound call answered");
    await call.playTTS({
      text: "Hello! Welcome to Knee Rub's Weather Helpline.",
      gender: "male",
    });
    console.log("Welcome text said");

    const ttsInfo = await call
      .promptTTS({
        text: "Please enter 1 for Washington weather, 2 for washington weather message, 3 to play rain dance, 4 to send rain dance.",
        duration: 10,
        digits: {
          max: 1,
          digitTimeout: 15,
        },
      })
      .onEnded();
    const digits = ttsInfo.digits;

    if (digits === "1") {
      // User input 1.  We are going to dial a Washington weather
      // number and connect the call.
      let peer = await call.connectPhone({
        from: call.from,
        to: DC_WEATHER_PHONE,
        timeout: 30,
        ringback: new Voice.Playlist().add(
          Voice.Playlist.TTS({
            text: "ring. ring. ring. ring. ring. ring. ring. ring",
          })
        ),
      });
      await peer.disconnected();
      console.log("Connected");
    } else if (digits === "2") {
      // User input 2.  We are going to query a weather API, find the weather of Washington,
      // and message that weather to the user's number.
      const place = "Washington DC";
      console.log(`Sending message about weather of ${place}`);
      const weather = await getWeatherFromOpenWeatherMap(place);
      const message = `${place} weather: ${
        weather.weather[0].description
      }. Temperature: ${(weather.main.temp - 273).toFixed(2)}°C`;
      console.log(message, "being sent to number", call.to);
      try {
        await messageClient.send({
          from: PHONE_NUMBER,
          to: call.to,
          body: message,
        });
      } catch (e) {
        await call
          .playTTS({
            text:
              "Sorry, I couldn't send the message." +
              (e?.data?.from_number[0] ?? " ") +
              " I will say the contents here. " +
              message,
          })
          .onEnded();
      }
    } else if (digits === "3") {
      //User input 3.  We are going to play a rain dance song hosted on our servers.
      console.log("Sending rain dance song");
      await call
        .playAudio({
          url: "https://cdn.signalwire.com/swml/April_Kisses.mp3",
        })
        .onEnded();
    } else if (digits === "4") {
      //User input 4.  We are going to ask for a phone number to dial and play a rain dance song to it.
      console.log("Sending rain song to your friend");
      const prompt = await call
        .promptTTS({
          text: "Please enter your friend's number then dial #. Please use the international format, but skip the plus sign.",
          digits: {
            max: 15,
            digitTimeout: 15,
            terminators: "#",
          },
        })
        .onEnded();
      console.log("Prompted for digits, received digits", prompt.digits);

      let digits = prompt.digits;

      let e164number;
      let number = parsePhoneNumber("+" + digits);
      let usnumber = parsePhoneNumber(digits, "US");
      if (number && number.isValid()) {
        e164number = number.number;
      } else if (usnumber && usnumber.isValid()) {
        e164number = usnumber.number;
      }
      console.log("Calling", e164number);
      if (e164number) {
        console.log("Calling with rain dance");
        callWithRainDance(e164number);
      } else {
        console.log("Invalid number", digits);
        let pb = await call.playTTS({
          gender: "male",
          text: "The number is invalid. Bye",
        });
        await pb.waitForEnded();
      }
    }
    console.log("Hanging up");
    call.hangup();
  },
});

async function callWithRainDance(number) {
  try {
    console.log("Sending Call");
    const call = await voiceClient.dialPhone({
      from: PHONE_NUMBER,
      to: number,
      timeout: 30,
    });
    console.log("sending rain dance song");
    await call
      .playAudio({
        url: "https://cdn.signalwire.com/swml/April_Kisses.mp3",
      })
      .onEnded();
    await call.hangup();
  } catch (e) {
    console.log("Call not answered.", e);
  }
}

async function getWeatherFromOpenWeatherMap(location) {
  let latlong;
  if (location === "Washington DC") latlong = "lat=38.9072&lon=-77.0367";
  else latlong = "lat=0&lon=0";
  let weather;
  try {
    weather = await axios.get(
      `https://api.openweathermap.org/data/2.5/weather?${latlong}&appid=c0fedc735ee57d142c09bf7bf8ed8f04`
    );
  } catch (e) {
    console.log(e);
    return { weather: [{ description: "error" }], main: { temp: 0 } };
  }
  console.log(weather.data);
  return weather.data;
}
```

As evident from the source code above, SignalWire Voice API makes it incredibly easy to write complex IVRs. You can get pretty far by using the [SignalWire Realtime SDK reference][signalwire-realtime-sdk-reference] and this code as a starting point.

In case there's some confusion, here's a brief walkthrough anyway:

### Installing the libraries

Download the required SignalWire Realtime Libraries by using `npm install @signalwire/realtime-api`. After you've done this, you can import required namespaces into your project using the following line:

```javascript
const { SignalWire } = require("@signalwire/realtime-api");
```

### Instantiating Voice and Messaging client

Using your [Project ID and API token][project-id-and-api-token], you can instantiate both Voice and Messaging Client.

`topics` parameter: RELAY topics allows you to treat a bunch of phone numbers as one, so that you can subscribe to and receive events (calls, messages etc) from your group of numbers at once. You can pick which numbers are in which RELAY topic from the SignalWire Dashboard. For this example, I've already set up my number to be in the `office` topic (read [Buying a Phone Number][buying-a-phone-number-2] if you're unfamiliar with the process).

```javascript
const client = await SignalWire({
  project: process.env.PROJECT_ID,
  token: process.env.API_TOKEN,
  topics: ["office"],
});

const messageClient = client.messaging;
const voiceClient = client.voice;
```

### Waiting for calls

Once you've successfully instantiated your Realtime Clients, you can use them to register events pertaining to the topic you've selected (like waiting for calls and messages to the numbers). In the example below, notice how easy it is to register event listener for incoming calls.

```javascript
console.log("Waiting for calls...");
await voiceClient.listen({
  topics: ["office"],
  onCallReceived: async (call) => {
    console.log("Got a call from", call.from, "to number", call.to);
    await call.answer();
    console.log("Inbound call answered");
  },
});
```

With this simple bit of code, as long as this program is running, the phone call to your number will automatically be received by this code.

Of course, picking up the call is but the first step. Now you'll have to interact with the user. Simply use the [Call][call-1] object that is passed to the event listener as parameter to perform actions and listen for user input. Like maybe:

1. making a robot say hello with [`call.playTTS`][call-playtts-1]
2. taking in user input with [`call.prompt`][call-prompt-1]
3. connecting the call to another phone call (like the Washington Weather Phone Number) with [`connectPhone`][connectphone-1] or [`connectSip`][connectsip-1]

And more.

### Making calls

Making calls is even simpler. Use the [Voice Client's][voice-client-s-1] `dialPhone` and `dialSip` methods to make calls. In fact, if these are too simple for you, feel free to use the more general purpose `dial` method with [`Device Builder`][device-builder] to make series and parallel calls at once.

```javascript
// Call someone and play them a nice song.
const call = await voiceClient.dialPhone({
  from: PHONE_NUMBER,
  to: "{NUMBER TO CALL IN E.164 FORMAT}",
  timeout: 30,
});
console.log("sending rain dance song");
await call
  .playAudio({
    url: "https://cdn.signalwire.com/swml/April_Kisses.mp3",
  })
  .onEnded();
await call.hangup();
```

## Wrap up

{/* #### Dial 📞 [+17712093222][17712093222-2] 📞 for a live demo of the code. */}

[The GitHub Repo][the-github-repo-1]

[SignalWire RealTime SDK Reference][signalwire-realtime-sdk-reference-2]

## Sign Up Here

If you would like to test this example out, you can [create a SignalWire account and Space][create-a-signalwire-account-and-space].

Please feel free to reach out to us on our [Community Discord][community-discord] or create a Support ticket from your SignalWire Space if you need guidance!
